[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/menus/squad_loadout_menu/themes/squad-loadout-menu-theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/squad_loadout_menu/scripts/squad-loadout-menu.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/squad_loadout_menu/prefabs/squad_name_button/SquadNameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites/test_ally.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/test_enemy.png" type="Texture" id=5]
[ext_resource path="res://ui/menus/squad_loadout_menu/scripts/idle.gd" type="Script" id=6]
[ext_resource path="res://ui/menus/squad_loadout_menu/scripts/interact.gd" type="Script" id=7]
[ext_resource path="res://ui/menus/squad_loadout_menu/scripts/exit.gd" type="Script" id=8]
[ext_resource path="res://assets/spritesheets/greybox_tiles/greybox_tiles_spritesheet.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 128, -1, 64, 65 )

[node name="SquadLoadoutPanel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = 100.0
margin_right = -200.0
margin_bottom = -100.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
_squad_button = ExtResource( 3 )
green = ExtResource( 4 )
red = ExtResource( 5 )

[node name="State" type="Node" parent="."]

[node name="Idle" type="Node" parent="State"]
script = ExtResource( 6 )

[node name="Interact" type="Node" parent="State"]
script = ExtResource( 7 )

[node name="Exit" type="Node" parent="State"]
script = ExtResource( 8 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 50

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer" groups=[
"focus_objects",
]]
margin_right = 300.0
margin_bottom = 860.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="SquadNames" type="VBoxContainer" parent="HBoxContainer/ScrollContainer"]
margin_right = 300.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 350.0
margin_right = 1500.0
margin_bottom = 860.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 1150.0
margin_bottom = 360.0

[node name="NeutralPortrait" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 256.0
margin_bottom = 360.0
rect_min_size = Vector2( 256, 360 )
size_flags_horizontal = 0
size_flags_vertical = 0
expand = true

[node name="ActorStats" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 260.0
margin_right = 1150.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 360 )
size_flags_horizontal = 3
size_flags_vertical = 0

